[tool.poetry]
name = "pile-deck"
version = "0.1.0"
description = ""
authors = ["Abhinav Tushar <abhinav@lepisma.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
displayhatmini = "^0.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
